新增更換圖片

--- a/EzOrder(Cus)/View/Base.lproj/Main.storyboard
+++ b/EzOrder(Cus)/View/Base.lproj/Main.storyboard
@@ -18,6 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" red="0.94908636810000002" green="0.58085781339999998" blue="0.56861180069999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="selectedImageTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="FBQ-H1-fFb" kind="relationship" relationship="viewControllers" id="u6P-9R-ei2"/>
