--- a/EzOrder(Cus)/View/AD/AD.storyboard
+++ b/EzOrder(Cus)/View/AD/AD.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--主頁-->
         <scene sceneID="B8Z-Hf-DHO">
             <objects>
                 <viewController id="iB0-1e-Vfd" customClass="ADViewController" customModule="EzOrder_Cus_" customModuleProvider="target" sceneMemberID="viewController">
@@ -140,7 +140,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="dpd-lJ-0Wh"/>
                     </view>
-                    <tabBarItem key="tabBarItem" systemItem="favorites" id="9nv-Y8-nWl"/>
+                    <tabBarItem key="tabBarItem" title="主頁" image="客戶端主頁" id="9nv-Y8-nWl"/>
                     <navigationItem key="navigationItem" id="fHE-ZA-A20">
                         <nil key="title"/>
                         <view key="titleView" contentMode="scaleToFill" id="Qtk-lZ-HoU">
@@ -198,5 +198,6 @@
     </scenes>
     <resources>
         <image name="navImg" width="206" height="73"/>
+        <image name="客戶端主頁" width="27.666666030883789" height="27.666666030883789"/>
     </resources>
 </document>
