--- a/EzOrder(Cus)/View/Personal/Personal.storyboard
+++ b/EzOrder(Cus)/View/Personal/Personal.storyboard
@@ -79,7 +79,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="MVt-od-xob"/>
                     </view>
-                    <tabBarItem key="tabBarItem" systemItem="more" id="AEp-dR-cPg"/>
+                    <tabBarItem key="tabBarItem" title="個人" image="客戶端個人" id="AEp-dR-cPg"/>
                     <navigationItem key="navigationItem" title="EzOrder" id="f42-O5-6Cg">
                         <barButtonItem key="leftBarButtonItem" title="登入" id="gZB-tq-Iyr">
                             <connections>
@@ -231,7 +231,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="輪盤" translatesAutoresizingMaskIntoConstraints="NO" id="J2X-4B-24b" customClass="RotateImageView" customModule="EzOrder_Cus_" customModuleProvider="target">
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="真輪盤" translatesAutoresizingMaskIntoConstraints="NO" id="J2X-4B-24b" customClass="RotateImageView" customModule="EzOrder_Cus_" customModuleProvider="target">
                                 <rect key="frame" x="37.5" y="183.5" width="300" height="300"/>
                                 <gestureRecognizers/>
                                 <constraints>
@@ -241,7 +241,7 @@
                                     <outletCollection property="gestureRecognizers" destination="gpK-Ln-CKG" appends="YES" id="0cE-sG-Vp2"/>
                                 </connections>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="齒輪" translatesAutoresizingMaskIntoConstraints="NO" id="vdu-IV-SsR">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="指針" translatesAutoresizingMaskIntoConstraints="NO" id="vdu-IV-SsR">
                                 <rect key="frame" x="166" y="312" width="43" height="43"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="vdu-IV-SsR" secondAttribute="height" multiplier="1:1" id="4HA-LA-vVc"/>
@@ -899,7 +899,8 @@
         <image name="AD1" width="3500" height="2179"/>
         <image name="ApplePay" width="267" height="267"/>
         <image name="Cash" width="267" height="267"/>
-        <image name="輪盤" width="845" height="846"/>
-        <image name="齒輪" width="201" height="201"/>
+        <image name="客戶端個人" width="27.666666030883789" height="26.333333969116211"/>
+        <image name="指針" width="109.66666412353516" height="142.66667175292969"/>
+        <image name="真輪盤" width="319.66665649414062" height="320.66665649414062"/>
     </resources>
 </document>
