--- a/EzOrder(Cus)/View/Search/Search.storyboard
+++ b/EzOrder(Cus)/View/Search/Search.storyboard
@@ -85,7 +85,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="kmv-nx-Dps"/>
                     </view>
-                    <tabBarItem key="tabBarItem" systemItem="search" id="xbc-jB-w9c"/>
+                    <tabBarItem key="tabBarItem" title="收尋" image="收尋" id="xbc-jB-w9c"/>
                     <navigationItem key="navigationItem" title="搜尋餐廳" id="feQ-KT-xlh"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
@@ -609,6 +609,7 @@
         <image name="link" width="208.33332824707031" height="208.33332824707031"/>
         <image name="商家" width="36" height="36"/>
         <image name="地址" width="83" height="83"/>
+        <image name="收尋" width="27.666666030883789" height="27.666666030883789"/>
         <image name="編輯菜單營業時間" width="69" height="69"/>
         <image name="電話" width="69" height="69"/>
     </resources>
