--- a/EzOrder(Cus)/View/Search/Search.storyboard
+++ b/EzOrder(Cus)/View/Search/Search.storyboard
@@ -59,7 +59,6 @@
                                         <connections>
                                             <outlet property="StoreImage" destination="NA1-Wu-HHI" id="AiL-Qt-lCb"/>
                                             <outlet property="StoreName" destination="uwO-JP-bAb" id="EEX-yz-zU0"/>
-                                            <segue destination="wbo-o6-ja6" kind="show" id="ebt-FW-fOS"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -100,8 +99,9 @@
                     <navigationItem key="navigationItem" title="搜尋餐廳" id="feQ-KT-xlh"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="StoreSearch" destination="x9V-CD-i3v" id="Gpi-Rx-rLM"/>
-                        <outlet property="StoreTableView" destination="sxM-aa-gac" id="aYK-ij-3R5"/>
+                        <outlet property="storeSearch" destination="x9V-CD-i3v" id="Gpi-Rx-rLM"/>
+                        <outlet property="storeTableView" destination="sxM-aa-gac" id="aYK-ij-3R5"/>
+                        <segue destination="wbo-o6-ja6" kind="show" identifier="resDetailSegue" id="rL9-4b-Vml"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nAU-RP-2YE" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -156,31 +156,31 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="850"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="商家" translatesAutoresizingMaskIntoConstraints="NO" id="CIY-8K-Z12">
-                                                <rect key="frame" x="17" y="192.5" width="36" height="36"/>
+                                                <rect key="frame" x="17" y="192.5" width="16" height="16"/>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="地址" translatesAutoresizingMaskIntoConstraints="NO" id="TsV-Bo-SfF">
-                                                <rect key="frame" x="13" y="245.5" width="40" height="40"/>
+                                                <rect key="frame" x="13" y="225.5" width="40" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="40" id="OfH-Uy-3WX"/>
                                                     <constraint firstAttribute="height" constant="40" id="uNE-YV-kwA"/>
                                                 </constraints>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="編輯菜單營業時間" translatesAutoresizingMaskIntoConstraints="NO" id="k0b-T6-NRy">
-                                                <rect key="frame" x="13" y="306.5" width="40" height="40"/>
+                                                <rect key="frame" x="13" y="286.5" width="40" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="40" id="6dC-Um-0lN"/>
                                                     <constraint firstAttribute="height" constant="40" id="LDe-8c-3m6"/>
                                                 </constraints>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="電話" translatesAutoresizingMaskIntoConstraints="NO" id="sqw-X4-O1U">
-                                                <rect key="frame" x="13" y="368.5" width="40" height="40"/>
+                                                <rect key="frame" x="13" y="348.5" width="40" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" id="6la-dv-Ob7"/>
                                                     <constraint firstAttribute="width" constant="40" id="kT7-YU-Crl"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="店名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="shX-5E-3qc">
-                                                <rect key="frame" x="64" y="204.5" width="25" height="15"/>
+                                                <rect key="frame" x="44" y="204.5" width="25" height="15"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                 <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                                 <nil key="highlightedColor"/>
@@ -204,7 +204,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="鼎王麻辣鍋" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9HY-gY-1t4">
-                                                <rect key="frame" x="123" y="204.5" width="87" height="20.5"/>
+                                                <rect key="frame" x="103" y="204.5" width="87" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -222,7 +222,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="tTl-f2-Vee">
-                                                <rect key="frame" x="0.0" y="564.5" width="375" height="179"/>
+                                                <rect key="frame" x="0.0" y="544.5" width="375" height="179"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="179" id="gOJ-Pa-13E"/>
                                                 </constraints>
@@ -234,7 +234,7 @@
                                                 </constraints>
                                             </imageView>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="CoW-RU-jLx">
-                                                <rect key="frame" x="0.0" y="428.5" width="375" height="128"/>
+                                                <rect key="frame" x="0.0" y="408.5" width="375" height="128"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="128" id="N66-HE-oSU"/>
@@ -292,7 +292,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HII-7B-hGX">
-                                                <rect key="frame" x="313" y="204.5" width="33" height="33"/>
+                                                <rect key="frame" x="293" y="204.5" width="33" height="33"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="33" id="4PZ-N1-FEl"/>
                                                     <constraint firstAttribute="width" constant="33" id="MYa-k2-Jyc"/>
@@ -380,15 +380,15 @@
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="linkBottonImage" destination="HII-7B-hGX" id="bZj-qf-Lfi"/>
+                        <outlet property="linkButton" destination="HII-7B-hGX" id="bZj-qf-Lfi"/>
                         <outlet property="myMap" destination="tTl-f2-Vee" id="I1k-fq-aO1"/>
                         <outlet property="showAddressButton" destination="N0V-07-Qgc" id="IIW-aB-zn5"/>
-                        <outlet property="showClassificationCollection" destination="CoW-RU-jLx" id="uDt-Qz-DGK"/>
-                        <outlet property="showStoreImageVIew" destination="TRO-6U-Ph6" id="nqg-iL-fEk"/>
-                        <outlet property="showStoreName" destination="9HY-gY-1t4" id="GJW-KX-wMT"/>
-                        <outlet property="showStoreOpenTime" destination="28p-yi-gD4" id="I5N-Zd-Zf1"/>
-                        <outlet property="showStorePhone" destination="P9g-9M-qbp" id="D8U-6I-ozG"/>
-                        <outlet property="textUmageview" destination="xJj-Oy-UET" id="goK-N5-e67"/>
+                        <outlet property="showClassificationCollectionView" destination="CoW-RU-jLx" id="uDt-Qz-DGK"/>
+                        <outlet property="showStoreImageView" destination="TRO-6U-Ph6" id="nqg-iL-fEk"/>
+                        <outlet property="showStoreNameLabel" destination="9HY-gY-1t4" id="GJW-KX-wMT"/>
+                        <outlet property="showStoreOpenTimeLabel" destination="28p-yi-gD4" id="I5N-Zd-Zf1"/>
+                        <outlet property="showStorePhoneLabel" destination="P9g-9M-qbp" id="D8U-6I-ozG"/>
+                        <outlet property="textImageview" destination="xJj-Oy-UET" id="goK-N5-e67"/>
                         <outletCollection property="textimage2" destination="xJj-Oy-UET" collectionClass="NSMutableArray" id="NkX-Y6-Bw6"/>
                     </connections>
                 </viewController>
