--- a/EzOrder(Cus)/View/Personal/Personal.storyboard
+++ b/EzOrder(Cus)/View/Personal/Personal.storyboard
@@ -294,8 +294,8 @@
                                 <rect key="frame" x="62.5" y="183.5" width="250" height="300"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hgT-rr-0hO">
-                                        <rect key="frame" x="89.5" y="50" width="71" height="36"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <rect key="frame" x="5" y="50" width="240" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -316,8 +316,8 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ewi-Vi-nnh">
-                                        <rect key="frame" x="101" y="94" width="48" height="24"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <rect key="frame" x="103" y="100" width="44" height="21.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -325,12 +325,14 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="hgT-rr-0hO" firstAttribute="top" secondItem="imG-au-YPF" secondAttribute="top" constant="50" id="4vH-DW-nl2"/>
-                                    <constraint firstItem="Ewi-Vi-nnh" firstAttribute="top" secondItem="hgT-rr-0hO" secondAttribute="bottom" constant="8" id="Ewt-2W-z5i"/>
+                                    <constraint firstItem="hgT-rr-0hO" firstAttribute="leading" secondItem="imG-au-YPF" secondAttribute="leading" constant="5" id="E9b-AU-krF"/>
+                                    <constraint firstItem="Ewi-Vi-nnh" firstAttribute="top" secondItem="hgT-rr-0hO" secondAttribute="bottom" constant="20" id="Ewt-2W-z5i"/>
                                     <constraint firstAttribute="bottom" secondItem="cDT-WZ-5ha" secondAttribute="bottom" constant="30" id="IuG-yF-Axf"/>
                                     <constraint firstItem="Ewi-Vi-nnh" firstAttribute="centerX" secondItem="imG-au-YPF" secondAttribute="centerX" id="NMU-Wn-tI4"/>
                                     <constraint firstItem="hgT-rr-0hO" firstAttribute="centerX" secondItem="imG-au-YPF" secondAttribute="centerX" id="Szj-6j-xtK"/>
                                     <constraint firstItem="cDT-WZ-5ha" firstAttribute="leading" secondItem="imG-au-YPF" secondAttribute="leading" constant="20" id="T5Y-dB-bDK"/>
                                     <constraint firstAttribute="trailing" secondItem="cDT-WZ-5ha" secondAttribute="trailing" constant="20" id="d4f-HR-627"/>
+                                    <constraint firstAttribute="trailing" secondItem="hgT-rr-0hO" secondAttribute="trailing" constant="5" id="qH4-MA-uGz"/>
                                     <constraint firstAttribute="width" secondItem="imG-au-YPF" secondAttribute="height" multiplier="5:6" id="sNS-NP-9cE"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
