優化輪盤動畫

--- a/EzOrder(Cus)/View/Order/Order.storyboard
+++ b/EzOrder(Cus)/View/Order/Order.storyboard
@@ -142,6 +142,7 @@
                                         </constraints>
                                         <connections>
                                             <outlet property="cardView" destination="sDb-QO-ZM5" id="MtT-jZ-r8n"/>
+                                            <outlet property="contentView" destination="B8w-Us-Gua" id="Pp3-c3-gM7"/>
                                             <outlet property="count" destination="ucR-HF-aSm" id="vl2-uI-ODB"/>
                                             <outlet property="minusBtn" destination="uhn-PJ-AzB" id="ZrX-9P-o2e"/>
                                             <outlet property="name" destination="Dbw-8S-w67" id="W4A-px-oA0"/>
